--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "backend" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "backend" ]
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -26,6 +26,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: "./backend/yarn.lock"
+        cache-dependency-path: "./backend/package-lock.json"
     - run: npm run build --if-present
       working-directory: ./backend
