--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: "./backend/package-lock.json"
+        cache-dependency-path: "./server/package-lock.json"
     - run: npm run build --if-present
-      working-directory: ./backend
+      working-directory: ./server
